[Site] Minor Updates

--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Data Scientist"
+  name             : "data engineer"
   avatar           : "https://avatars1.githubusercontent.com/u/22937951?s=460&u=08f6ec28ba7178f24853d6e65d8d5ff0602881cc&v=4"
   bio              : "specializing in natural language processing and music information retrieval"
   location         : "New York City"
