--- a/_config.yml
+++ b/_config.yml
@@ -202,15 +202,15 @@ defaults:
     values:
       layout: single
       author_profile: true
-  # _teaching
-  # - scope:
-  #     path: ""
-  #     type: teaching
-  #   values:
-  #     layout: single
-  #     author_profile: true
-  #     share: true
-  #     comments: true
+  # _music
+  - scope:
+      path: ""
+      type: music
+    values:
+      layout: single
+      author_profile: true
+      share: true
+      comments: true
   # # _publications
   # - scope:
   #     path: ""
