--- a/_config.yml
+++ b/_config.yml
@@ -299,5 +299,5 @@ compress_html:
   ignore:
     envs: development
 
-minimal_mistakes_skin: dark
-theme: dark
+minimal_mistakes_skin: neon
+theme: jekyll-theme-minimal
